// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollBox should show a bottom shadow when scrolling up 1`] = `
.c0 {
  background: linear-gradient(to bottom,rgba(0,0,0,0) 20%,rgba(0,0,0,0.1) 100%);
  height: 6px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}

<styled.div>
  <div
    className="c0"
  />
</styled.div>
`;

exports[`ScrollBox should show a top shadow when scrolling down 1`] = `
.c0 {
  background: linear-gradient(to bottom,rgba(0,0,0,0.1) 20%,rgba(0,0,0,0) 100%);
  height: 6px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
}

<styled.div>
  <div
    className="c0"
  />
</styled.div>
`;
